flyout scrollbar fix
so the % stuff stops jumping around when the scrollbar is engaged.

--- a/flyout/flyout.css
+++ b/flyout/flyout.css
@@ -34,6 +34,9 @@
     --warning: #FCE200;
     --error: #DC056C;
   }
+html {
+    overflow-y: scroll; 
+}
 
 body {
     background: var(--gray-0);
